2003-09-18  John Levon  <levon@movementarian.org>

	* libutil++/Makefile.am:
	* libutil++/image_flags.h: move to ...

	* libpp/Makefile.am:
	* libpp/image_error.h: ... here, and rename

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: take an in-out bool
	instead of image_flags

	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h:
	* libpp/locate_images.cpp:
	* libpp/locate_images.h:
	* libpp/profile_spec.cpp:
	* pp/image_errors.cpp:
	* pp/opgprof.cpp:
	* pp/populate.cpp: changes from above

2003-09-18  John Levon  <levon@movementarian.org>

	* libutil++/Makefile.am:
	* libutil++/image_flags.h: flags for image read failure

	* libpp/profile_spec.cpp:
	* libpp/locate_images.h:
	* libpp/locate_images.cpp:
	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: use image_flags

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: use image_flags, no longer error
	out on format failure

	* pp/Makefile.am:
	* pp/image_errors.cpp:
	* pp/image_errors.h: errors previously reported in locate_images
	are now reported here by the client

	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport.cpp:
	* pp/populate.h:
	* pp/populate.cpp: use the above

2003-09-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: use 9 not 12 for % field width
	* libutil++/string_manip.cpp: shrink 100.0000 to 100.000
	* pp/opreport.cpp: s/" "/' '

2003-09-18  John Levon  <levon@movementarian.org>

	* pp/opannotate_options.cpp:
	* pp/opreport_options.cpp: clean up error messages

	* pp/opgprof_options.h:
	* pp/opgprof_options.cpp:
	* pp/opgprof.cpp: use inverted_profile API

2003-09-18  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: overwrite all current settings with --separate,
	  this change behavior of --separate=kernel,library now we really setup
	  both in this case.

2003-09-18  John Levon  <levon@movementarian.org>

	* libpp/locate_images.cpp: rewrite a little

	* libutil++/op_bfd.cpp: set fsize to default to -1,