@@ -8,8 +8,6 @@ for some pointers and/or read HACKING and doc/CodingStyle.
 
  o why rel_to_abs_path in locate_images ??
  o add separate_thread to opd_header or remove all separate from opd_header
- o hide separate class/inverted stuff inside libpp
-   o return if multiple apps in the single API call used by all frontends
  o thread separate GUI + docs
  o we need to handle thread separate without needing a useless -m tid
    (several processes w/o using threads)
@@ -61,11 +59,8 @@ Before 1.0 little stuff
  o opannotate should error out with a msg if no debug symbols are found at all
  o oprof_start dialog size is too small initially
  o oprof_start key movement through events doesn't change help text
- o add -Wdeclaration-after-statement for $CC
  o GUI still has a physical-counter interface, should have a general one
    like opcontrol --event
- o implement pp_interface alias
- o look if we must remove help_str support from libopt++
  o move oprofiled.log to OP_SAMPLE_DIR/current ?
  o lib-image: and image: behavior depend on --separate=, if --separate=library
   opreport "lib-image:*libc*" --merge=lib works but not
@@ -125,6 +120,7 @@ vma      samples  cum. samples  %           cum. %     symbol name             i
   mention in the xxx option help string than the --no-xxx is allowed. Not
   really usefull if we have a little number of --no.
  o should we make the sighup handler re-read counter config and re-start profiling too ?
+ o implement pp_interface alias (is it worth it ?)
  o improve --smart-demangle
 	o allow user to add it's own pattern in user.pat, document it.
 	o hard code ${typename} regular definition to remove all current limitations (difficult, perhaps after 1.0 ?).
